--- a/client/index.html
+++ b/client/index.html
@@ -53,22 +53,50 @@
     <div class="d-flex justify-content-center">
       <div class="row">
         <div class="col-sm" style="margin:5px;">
-            <input type="number" class="form-control" placeholder="0.0">
+          <input type="number" class="form-control" placeholder="0.0" />
         </div>
         <div class="col-sm" style="margin:5px;">
-            <button class="form-control bg-primary text-light" onclick="console.log('hello')">Convert</button>
-            <select class="form-control" id="SelectCurrency" style="margin-top:10px;">
-                <option>Dinnar</option>
-                <option>Oui</option>
-                <option>Non</option>
-            </select>
+          <button
+            class="form-control bg-primary text-light"
+            onclick="console.log('hello')"
+          >
+            Convert
+          </button>
+          <select
+            class="form-control"
+            id="SelectCurrency"
+            style="margin-top:10px;"
+          >
+            <option>Dinnar</option>
+            <option>Oui</option>
+            <option>Non</option>
+          </select>
         </div>
         <div class="col-sm" style="margin:5px;">
-            <input type="number" class="form-control" placeholder="0.0">
+          <input type="number" class="form-control" placeholder="0.0" />
         </div>
       </div>
-      <!-- Table -->
+    </div>
+    <!-- Table -->
+    <div class="d-flex justify-content-center">
+      <div class="col-sm" style="margin:5px;"></div>
+      <div class="col-sm">
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">Name</th>
+              <th scope="col">Rate convertion</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">Mark</th>
+              <td>1.12</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
+      <div class="col-sm" style="margin:5px;"></div>
     </div>
   </body>
 </html>
