--- a/client/index.html
+++ b/client/index.html
@@ -46,8 +46,16 @@
   </head>
   <body onload="onLoad()">
     <!-- Header -->
-    <div class="d-flex justify-content-center bg-info" style="height: 100px;">
-      <h5 class="align-self-center text-light">Hello there</h5>
+    <div
+      class="d-flex justify-content-center bg-info"
+      style="height: 100px;padding-top:15px"
+    >
+      <div class="row">
+        <div class="col-sm">
+          <h5 class="text-light">Hello there</h5>
+          <a class="text-light" onclick="setLogin()">signIn/signUp</a>
+        </div>
+      </div>
     </div>
     <!-- Form -->
     <div class="d-flex justify-content-center">
